# piratesim2024

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pygame_gui_test.py  pygame_play.py  pyproject.toml
notebooks/: pirate_levels.ipynb
notebooks/analysis/: visualise_chains.py
piratesim/: artifact.py  common.py  game.py  pirate.py  quest.py  single_run.py  trait.py  world_map.py
piratesim/analysis/: visualise_chains.py
piratesim/assets/artifacts/: artifacts.csv
piratesim/assets/encounters/: encounters.csv
piratesim/assets/pirates/: pirates.csv
piratesim/assets/quests/: idle_quests.csv  quests.csv
piratesim/common/: assets.py  os.py  random.py  utils.py
piratesim/encounters/: effects.py  encounter.py  encounter_effect.py  encounter_manager.py
piratesim/quests/: __init__.py  effects.py  quest.py  quest_effect.py  quest_factory.py
tests/: test_roulette.py
